--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,22 +1,22 @@
 add_executable(test test.c)
 
-add_library(stack stack.c)
+add_library(cii stack.c arena.c atom.c assert.c except.c mem.c types.c)
 
 target_compile_definitions(test PUBLIC
   "$<$<CONFIG:DEBUG>:DEBUG>"
 )
 
-target_compile_definitions(stack PUBLIC
+target_compile_definitions(cii PUBLIC
   "$<$<CONFIG:DEBUG>:DEBUG>"
 )
 
-target_compile_options(stack PRIVATE
+target_compile_options(cii PRIVATE
   -fsanitize=address,leak
   -static-libasan
   -fno-omit-frame-pointer
 )
 
-target_link_options(stack PRIVATE
+target_link_options(cii PRIVATE
   -fsanitize=address,leak
   -static-libasan
   -fno-omit-frame-pointer
@@ -35,6 +35,6 @@ target_link_options(test PRIVATE
 )
 
 target_link_libraries(test PUBLIC
-  stack
+  cii
   m
 )
